// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner tests is a basic snapshot 1`] = `
<span
  class="inline-flex align-middle dark:text-blue-300 text-blue-800 w-6 h-6 "
  data-testid="spinner"
>
  <svg
    class="animate-spin stroke-[0.75] fill-none stroke-current"
    viewBox="0 0 16 16"
  >
    <circle
      cx="8"
      cy="8"
      r="7"
      stroke-dasharray="60"
      stroke-dashoffset="50"
      stroke-linecap="round"
    />
  </svg>
</span>
`;

exports[`Spinner tests is a snapshot with a size of type "large" 1`] = `
<span
  class="inline-flex align-middle dark:text-blue-300 text-blue-800 w-12 h-12 "
  data-testid="spinner"
>
  <svg
    class="animate-spin stroke-[0.75] fill-none stroke-current"
    viewBox="0 0 16 16"
  >
    <circle
      cx="8"
      cy="8"
      r="7"
      stroke-dasharray="60"
      stroke-dashoffset="50"
      stroke-linecap="round"
    />
  </svg>
</span>
`;

exports[`Spinner tests is a snapshot with a size of type "medium" 1`] = `
<span
  class="inline-flex align-middle dark:text-blue-300 text-blue-800 w-6 h-6 "
  data-testid="spinner"
>
  <svg
    class="animate-spin stroke-[0.75] fill-none stroke-current"
    viewBox="0 0 16 16"
  >
    <circle
      cx="8"
      cy="8"
      r="7"
      stroke-dasharray="60"
      stroke-dashoffset="50"
      stroke-linecap="round"
    />
  </svg>
</span>
`;

exports[`Spinner tests is a snapshot with a size of type "small" 1`] = `
<span
  class="inline-flex align-middle dark:text-blue-300 text-blue-800 w-4, h-4 "
  data-testid="spinner"
>
  <svg
    class="animate-spin stroke-[0.75] fill-none stroke-current"
    viewBox="0 0 16 16"
  >
    <circle
      cx="8"
      cy="8"
      r="7"
      stroke-dasharray="60"
      stroke-dashoffset="50"
      stroke-linecap="round"
    />
  </svg>
</span>
`;

exports[`Spinner tests is a snapshot with a size of type "xlarge" 1`] = `
<span
  class="inline-flex align-middle dark:text-blue-300 text-blue-800 w-24 h-24 "
  data-testid="spinner"
>
  <svg
    class="animate-spin stroke-[0.75] fill-none stroke-current"
    viewBox="0 0 16 16"
  >
    <circle
      cx="8"
      cy="8"
      r="7"
      stroke-dasharray="60"
      stroke-dashoffset="50"
      stroke-linecap="round"
    />
  </svg>
</span>
`;
